# xcat

./: .gitignore  LICENSE  README.md  changelog.md  main.py  pyproject.toml
src/xcat/: __main__.py  cli.py  context.py  formatter.py  ignore_presets.py  matcher.py  output.py  resolver.py  scanner.py
src/xcat/core/: config.py  logger.py  types.py
